# RAG-Anything-OpenCode

./: .env.example  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLOUD-EMBEDDINGS.md  DOCLING.md  INSTRUCTIONS.md  LICENSE  LICENSE.md  LOCAL-EMBEDDINGS.md  README.md  SETUP.md  package-lock.json  package.json
rag-anything-mcp/: .env.example  README.md  pyproject.toml
rag-anything-mcp/rag_anything_mcp/: __init__.py  __main__.py  cli_detector.py  detect_cli.py
src/: config.ts
src/bot/: index.ts
src/bot/handlers/: permission.ts  question.ts
src/interaction/: cleanup.ts  guard.ts  manager.ts
src/opencode/: client.ts
src/runtime/: bootstrap.ts
src/setup/: quick-setup.ts
tests/interaction/: guard.test.ts
